recursive inference